istio/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-experiments-vs
spec:
  hosts:
    - "*"
  gateways:
    - istio-experiments-gateway
  http:
  - route:
    - destination:
        host: istio-experiments-service
        subset: v1
        port:
          number: 8080
      weight: 50
    - destination:
        host: istio-experiments-service
        subset: v2
        port:
          number: 8080
      weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: istio-experiments
spec:
  host: istio-experiments-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      app: istio-experiments
      version: v1
  - name: v2
    labels:
      app: istio-experiments
      version: v2
